feat: add feature search by many field