@@ -1,6 +1,7 @@
 package com.nhom678.server.services.impl;
 
 import com.nhom678.server.dto.request.book.BookCreationRequest;
+import com.nhom678.server.dto.request.book.BookSearchCriteria;
 import com.nhom678.server.dto.request.book.BookUpdateRequest;
 import com.nhom678.server.dto.response.BookResponse;
 import com.nhom678.server.entity.Book;
@@ -10,6 +11,7 @@ import com.nhom678.server.exceptions.AppException;
 import com.nhom678.server.exceptions.ErrorCode;
 import com.nhom678.server.mapper.BookMapper;
 import com.nhom678.server.repositories.BookRepository;
+import com.nhom678.server.repositories.BookSpecification;
 import com.nhom678.server.repositories.CategoryRepository;
 import com.nhom678.server.repositories.PublisherRepository;
 import com.nhom678.server.services.BookService;
@@ -17,6 +19,7 @@ import com.nhom678.server.utils.URLUtils;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -24,6 +27,7 @@ import javax.swing.text.html.Option;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -60,28 +64,7 @@ public class BookServiceImpl implements BookService {
         return bookMapper.toBookResponse(bookRepository.save(book));
     }
 
-    @Override
-    public List<BookResponse> searchBookByISBNAndBookName(String isbn, String bookName) {
-        List<Book> list = new ArrayList<>();
 
-        Boolean hasIsbn = isbn != null && !isbn.isBlank();
-        Boolean hasBookName = bookName != null && !bookName.isBlank();
-        
-        if(!hasIsbn && !hasBookName)
-            throw new AppException(ErrorCode.BOOK_NOT_FOUND);
-        
-        if(hasIsbn)
-            bookRepository.findBookByIsbn(isbn).ifPresent(list::add);
-        if(hasBookName)
-            bookRepository.findBookByBookName(bookName).ifPresent(list::add);
-        
-        if(list.isEmpty())
-            throw new AppException(ErrorCode.BOOK_NOT_FOUND);
-        
-        return list.stream()
-                .map(bookMapper::toBookResponse)
-                .toList();
-    }
 
     @Override
     public List<BookResponse> getAllBooks() {
@@ -108,16 +91,13 @@ public class BookServiceImpl implements BookService {
     }
 
     @Override
-    public List<BookResponse> getBooksHaveCategoryId(Integer categoryId) {
-        List<Book> listBook = new ArrayList<>();
-        Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new AppException(ErrorCode.CATEGORYID_NOT_FOUND));
-        for (Book book : bookRepository.findAll()) {
-            if(book.getCategory().getCategoryId().equals(categoryId))
-                listBook.add(book);
-        }
-        return listBook.stream()
+    public List<BookResponse> searchBooks(BookSearchCriteria criteria) {
+        Specification<Book> spec = BookSpecification.buildSpecification(criteria);
+        return bookRepository.findAll(spec)
+                .stream()
                 .map(bookMapper::toBookResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
+
+
 }
